fixed bug with searching in another counties

--- a/src/app/components/rent-list/rent-list.component.html
+++ b/src/app/components/rent-list/rent-list.component.html
@@ -3,14 +3,14 @@
   <input type="text" placeholder="Enter city..." formControlName="cityName" >
   <label>Country</label>
   <select name="country" formControlName="selectedCountry" >
-    <option value="australia">Australia</option>
-    <option value="brasil">Brasil</option>
-    <option value="deutschland">Deutschland</option>
-    <option value="espana">Espana</option>
-    <option value="france">France</option>
-    <option value="india">India</option>
-    <option value="italia">Italia</option>
-    <option value="mexico">Mexico</option>
+    <option value="au">Australia</option>
+    <option value="br">Brasil</option>
+    <option value="de">Deutschland</option>
+    <option value="es">Espana</option>
+    <option value="fr">France</option>
+    <option value="in">India</option>
+    <option value="it">Italia</option>
+    <option value="mx">Mexico</option>
     <option value="uk">UK</option>
   </select>
   <button>Search</button>
