added an Item component, implemented unsubscribing from an subject

--- a/src/app/components/rent-list/rent-list.component.html
+++ b/src/app/components/rent-list/rent-list.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="searchForm" (ngSubmit)="onSubmit()">
-  <label >Specified yor search</label>
+  <label >Specified yor search: </label>
   <input type="text" placeholder="Enter city..." formControlName="cityName" >
-  <label>Country</label>
+  <label>Country: </label>
   <select name="country" formControlName="selectedCountry" >
     <option value="au">Australia</option>
     <option value="br">Brasil</option>
