made navigation to an item url when click

--- a/src/app/components/items/item/item.component.html
+++ b/src/app/components/items/item/item.component.html
@@ -1,3 +1,6 @@
-<p>
-  item works!
-</p>
+<div (click)="showDetails()">
+  <h3>{{data.title}}</h3>
+  <div>
+    <span>{{data.price_formatted}}</span>
+    {{data.keywords}}</div>
+</div>
