implemented routing to ItemDetailsComponent (broken)

--- a/src/app/components/items/item/item.component.html
+++ b/src/app/components/items/item/item.component.html
@@ -2,5 +2,6 @@
   <h3>{{data.title}}</h3>
   <div>
     <span>{{data.price_formatted}}</span>
-    {{data.keywords}}</div>
+    {{data.keywords}}
+  </div>
 </div>
