--- a/src/app/components/items/items.component.html
+++ b/src/app/components/items/items.component.html
@@ -1,5 +1,5 @@
 <ul>
-  <li *ngFor="let item of items | async"  >
+  <li *ngFor="let item of items$ | async"  >
     <app-item [data]="item"></app-item>
   </li>
 </ul>
