added service to favorite component, fixed returning back to previous url

--- a/src/app/components/items/item-details/item-details.component.html
+++ b/src/app/components/items/item-details/item-details.component.html
@@ -1,5 +1,5 @@
 <ng-container>
-  <img [src]="data.img_url" >
+  <img [src]="data.imgUrl" >
   <p> {{data.keywords}} </p>
-  <a routerLink='/'>BACK</a>
+  <input type="button" (click)="onClick()" value="BACK" >
 </ng-container>
