--- a/src/app/components/items/item/item.component.html
+++ b/src/app/components/items/item/item.component.html
@@ -1,6 +1,6 @@
 <div>
   <div (click)="showDetails()">
-    <h3>{{data.title}}</h3>
+    <h3 class="title">{{data.title}}</h3>
     <div>
       <span>{{data.priceFormatted}}</span>
       {{data.keywords}}
