--- a/src/app/components/pagination/pagination.component.scss
+++ b/src/app/components/pagination/pagination.component.scss
@@ -1,14 +1,17 @@
 :host{
+  background-color: whitesmoke;
   ul{
     width: 100%;
     display: flex;
     flex-direction: row;
+    justify-content: center;
     list-style: none;
     padding: 0;
     margin: 0;
 
   li{
-    padding: 5px;
+    padding: 10px;
+    margin: 20px;
     border: 1px solid whitesmoke;
     color: #fff;
     background-color: black;
